Changed class tags to fix overlap issues
Multiple class tags in css applied to each other
so renamed the class tags to fix this.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,12 +9,11 @@ html {
 }
 
 .image {
-    display: block;
     width: 300px;
     border: 5px dotted black;
 }
 
-.header.container {
+.headercontainer {
     background-color: #1F2937;
     padding: 30px 250px 80px;
 }
@@ -31,7 +30,7 @@ a {
     text-decoration: none;
 }   
 
-button, a, .header.container {
+button, a, .headercontainer {
     color: white;
 }
 
@@ -39,7 +38,7 @@ button {
     background-color: #3882F6; 
 }
 
-.header.nav {
+.nav {
     display: flex;
     justify-content: space-between;
 }
@@ -47,4 +46,18 @@ button {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
+
+.headercontent {
+    display: flex;
+    
+    flex-direction: column;
+    width: 300px;
+}
+
+.contentcontainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 
